# sophia_rs

./: Cargo.toml
.devcontainer/: devcontainer.json
jsonld/src/: options.rs  parser.rs  serializer.rs
jsonld/src/parser/: test.rs
jsonld/src/serializer/: engine.rs
ox/: Cargo.toml
ox/src/: dataset.rs  graph.rs  lib.rs  quad.rs  source.rs  term.rs  triple.rs
resource/src/loader/: _trait.rs
sophia/examples/: parse.rs
