[package]
name = "sophia_ox"
description = "A Rust toolkit for RDF and Linked Data - Common code for Oxrdf adapters"
documentation = "https://docs.rs/sophia_rio"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
sophia_api.workspace = true
sophia_iri.workspace = true
oxrdf.workspace = true
thiserror.workspace = true

[dev-dependencies]
